# stock-dashboard

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/db/: database.py  models.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  market.py  trade.py  watchlist.py
backend/app/services/: llm.py  obsidian.py  stock_data.py  technical.py
deploy/: README.md  dot-env.example  stock-dashboard-backend.service  stock-dashboard-frontend.service
frontend/: Dockerfile  app.py  config.py
frontend/pages/: chat.py  journal.py  watchlist.py
